# lsd_thumbnail_server

./: .env.example  .gitignore  Cargo.toml  ReadMe.MD
src/: main.rs  utility.rs
