[package]
name = "lsd"
version = "1.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
dotenv = "0.15.0"
image = "0.25.9"
macroquad = "0.4.14"
memory-stats = "1.2.0"
png = "0.18.0"
rouille = "3.6.2"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8", features = [ "runtime-async-std", "mysql" ] }
tobj = "4.0.3"
tokio = { version = "1.48.0", features = ["full"] }
url = { version = "2.5", features = ["serde"] }

[profile.release]
panic = "abort"
opt-level = "z"
strip = "symbols"

[build]
rustflags = ["-C", "target-cpu=native"]